@@ -30,8 +30,12 @@ angular.module('console', ['sql', 'datatypechecks'])
   .directive('console', function(SQLQuery, ColumnTypeCheck, ConsoleFormatting){
     return {
       restrict: 'A',
-      controller: ['$scope', '$translate', '$location', 'Clipboard', function($scope, $translate, $location, Clipboard){
+      controller: ['$scope', '$translate', '$location', 'Clipboard', '$timeout' , function($scope, $translate, $location, Clipboard, $timeout){
         var self = this;
+
+        $timeout(function(){
+          $('#cr-console-query').attr('tabindex',-1).focus(); 
+        }, 500);
 
         var inputScope = null;
         var statement = '';
@@ -121,7 +125,6 @@ angular.module('console', ['sql', 'datatypechecks'])
           if ($(e.target).is('textarea')) {
             return;
           }
-
           var keyCode = e.keyCode;
 
           if (keyCode === 39) {
@@ -348,6 +351,7 @@ angular.module('console', ['sql', 'datatypechecks'])
         $scope.execute = function() {
           self.execute(statement);
           $location.search('query', statement);
+          $('#cr-console-query').attr('tabindex',-1).focus();
         };
 
         $scope.share = function () {
@@ -468,7 +472,7 @@ angular.module('console', ['sql', 'datatypechecks'])
           }
         }
         updateStatementOnUrlSearch();
-
+        
         $scope.$on('$routeUpdate', updateStatementOnUrlSearch.bind(this));
 
         // input change event
