@@ -33,7 +33,7 @@
             </div>
           </div>
 
-          <div>
+          <div id="cr-console-query">
             <cli id="console-editor" mime-type="text/x-cratedb" theme="monokai"></cli>
           </div>
 
