@@ -16,6 +16,9 @@ Changes
 Fixes
 -----
 
+ - Added focus on textbox when the console view is loaded and after
+   clicking on the `Execute Query` button.
+
  - Shard and node details are now loaded on demand in the shards view.
 
  - Fixed issue that caused the cluster check display to be delayed.
